@@ -531,3 +531,5 @@ contributors:
 * Michal Vasilek: contributor
 
 * Kai Mueller (kasium): contributor
+
+* Sam Vermeiren (PaaEl): contributor
