@@ -1,7 +1,11 @@
 # pylint: disable=missing-module-docstring, missing-function-docstring, protected-access
+import os
 import unittest.mock
 
+import pytest
+
 import pylint.lint
+from pylint.config import OptionsManagerMixIn
 
 
 def check_configuration_file_reader(config_file):
@@ -91,3 +95,31 @@ reports = true
 """
     )
     check_configuration_file_reader(config_file)
+
+
+def test_can_read_env_variable(tmp_path):
+    # Check that we can read the "regular" INI .pylintrc file
+    # if it has an environment variable.
+    config_file = tmp_path / "pyproject.toml"
+    config_file.write_text(
+        """
+[tool.pylint."messages control"]
+disable = "logging-not-lazy,logging-format-interpolation"
+jobs = "10"
+reports = "yes"
+"""
+    )
+    os.environ["tmp_path_env"] = str(tmp_path / "pyproject.toml")
+    options_manager_mix_in = OptionsManagerMixIn("", "${tmp_path_env}")
+    options_manager_mix_in.read_config_file("${tmp_path_env}")
+
+    def test_read_config_file():
+        with pytest.raises(OSError):
+            options_manager_mix_in.read_config_file("${tmp_path_en}")
+
+    test_read_config_file()
+    options_manager_mix_in.load_config_file()
+    section = options_manager_mix_in.cfgfile_parser.sections()[0]
+    jobs, jobs_nr = options_manager_mix_in.cfgfile_parser.items(section)[1]
+    assert jobs == "jobs"
+    assert jobs_nr == "10"
