@@ -101,6 +101,10 @@ Release date: TBA
 
   Closes #4711
 
+* Config files can now contain environment variables
+
+  Closes #3839
+
 
 What's New in Pylint 2.9.6?
 ===========================
